--- a/style.css
+++ b/style.css
@@ -65,20 +65,74 @@
 #wrapper #btn-prev, #wrapper #btn-next {
   width: 50px;
   height: 50px;
-  background-color: #000;
+  border-radius: 50%;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   z-index: 3;
+  cursor: pointer;
 }
 
 #wrapper #btn-prev {
   left: 0;
 }
 
+#wrapper #btn-prev .sp1, #wrapper #btn-prev .sp2 {
+  display: inline-block;
+  position: relative;
+  left: 10px;
+  width: 25px;
+  height: 5px;
+  background-color: #000;
+}
+
+#wrapper #btn-prev .sp1 {
+  top: 3.5px;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+#wrapper #btn-prev .sp2 {
+  top: -3.5px;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
 #wrapper #btn-next {
   right: 0;
+}
+
+#wrapper #btn-next .c1 {
+  width: 30px;
+  height: 30px;
+  border: 5px solid #ffffff99;
+  border-radius: 50%;
+}
+
+#wrapper #btn-bottoms {
+  position: absolute;
+  bottom: 50px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  cursor: pointer;
+}
+
+#wrapper #btn-bottoms .btn-bottom {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-color: #00000055;
+  border-radius: 50%;
+  margin: 0 15px;
+}
+
+#wrapper #btn-bottoms .btn-active {
+  -webkit-animation: bToDb 1.5s;
+          animation: bToDb 1.5s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 @-webkit-keyframes scaleImg {
@@ -122,6 +176,24 @@
   100% {
     -webkit-transform: translateX(0);
             transform: translateX(0);
+  }
+}
+
+@-webkit-keyframes bToDb {
+  0% {
+    background-color: #00000055;
+  }
+  100% {
+    background-color: #00000099;
+  }
+}
+
+@keyframes bToDb {
+  0% {
+    background-color: #00000055;
+  }
+  100% {
+    background-color: #00000099;
   }
 }
 /*# sourceMappingURL=style.css.map */
