--- a/style.scss
+++ b/style.scss
@@ -49,17 +49,65 @@
     #btn-prev, #btn-next  {
         width: 50px;
         height: 50px;
-        background-color: #000;
+        // background-color: #000;
+        // border: 2px solid #000;
+        border-radius: 50%;
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
         z-index: 3;
+        cursor: pointer;
     }
     #btn-prev {
         left: 0;
+        .sp1, .sp2 {
+            display: inline-block;
+            position: relative;
+            left: 10px;
+            width: 25px;
+            height: 5px;
+            background-color: #000;
+        }
+        .sp1 {
+            top: 3.5px;
+            transform: rotate(-45deg);
+        }
+        .sp2 {
+            top: -3.5px;
+            transform: rotate(45deg);
+
+        }
     }
     #btn-next {
         right: 0;
+        .c1 {
+            width: 30px;
+            height: 30px;
+            // background-color: #000;
+            border: 5px solid #ffffff99;
+            border-radius: 50%;
+        }
+    }
+
+
+    #btn-bottoms {
+        position: absolute;
+        bottom: 50px;
+        left: 50%;
+        transform: translateX(-50%);
+        cursor: pointer;
+        .btn-bottom {
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            background-color: #00000055;
+            border-radius: 50%;
+            margin: 0 15px;
+        }
+        .btn-active {
+            animation: bToDb 1.5s;
+            animation-fill-mode: forwards;
+        }
     }
 }
 
@@ -78,5 +126,14 @@
     }
     100% {
         transform: translateX(0);
+    }
+}
+
+@keyframes bToDb {
+    0% {
+        background-color: #00000055;
+    }
+    100% {
+        background-color: #00000099;
     }
 }
